--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
         </section>
         <div id="pieChart">
             <img src="gnome.png" alt="placeholder" width="200px">
-            <p><b>THIS IS WHERE THE GODFORSAKEN PIE CHART IS GONNA BE</b></p>
+            <p><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id voluptatum necessitatibus commodi
+                    corrupti distinctio molestiae, et nihil quia, autem velit eius odit corporis officia nisi placeat
+                    veritatis error reiciendis nulla?</b></p>
         </div>
 </body>
 
