--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget Calculator</title>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/java.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body id="pageOne">
@@ -138,11 +138,14 @@
             </table>
         </section>
         <div id="pieChart">
-            <img src="gnome.png" alt="placeholder" width="200px">
+
+        
             <p><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id voluptatum necessitatibus commodi
                     corrupti distinctio molestiae, et nihil quia, autem velit eius odit corporis officia nisi placeat
                     veritatis error reiciendis nulla?</b></p>
         </div>
+
+
 </body>
 
 </html>
