--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Budget Calculator</title>
     <link rel="stylesheet" href="css/index.css">
     <script src="index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 
 <body id="pageOne">
@@ -19,7 +20,6 @@
                 <tr>
                     <th class="side">Gross Annual Income</th>
                     <th><input id="name" name="name"></th>
-                    <!-- Fix this line -->
                     <th><a href="careers.html">
                             <section class="occupationsBtn">Occupations</section>
                         </a></th>
@@ -137,12 +137,36 @@
                 </tr>
             </table>
         </section>
-        <div id="pieChart">
+        <!-- AAAAAA PIE CHART CODE -->
+        <div id="pieChart" width="200px" height="200px">
+            <div id="piechart"></div>
 
-        
-            <p><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id voluptatum necessitatibus commodi
-                    corrupti distinctio molestiae, et nihil quia, autem velit eius odit corporis officia nisi placeat
-                    veritatis error reiciendis nulla?</b></p>
+            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+            <script type="text/javascript">
+                google.charts.load('current', { 'packages': ['corechart'] });
+                google.charts.setOnLoadCallback(drawChart);
+
+                function drawChart() {
+                    var data = google.visualization.arrayToDataTable([
+                        ['Task', 'Hours per Day'],
+                        ['Work', 4],
+                        ['Eat', 10],
+                        ['TV', 10],
+                        ['Gym', 10],
+                        ['Sleep', 10]
+                    ]);
+
+                    var options = { 'title': 'Budget Wheel', 'width': 550, 'height': 400 };
+
+                    var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+                    chart.draw(data, options);
+                }
+            </script>
+
+            <p><b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores a repellat libero, aliquid enim
+                    quas voluptatum esse minus consectetur recusandae. Vel quod veniam atque soluta sed obcaecati quos
+                    esse velit.</b></p>
         </div>
 
 
