--- a/careers.html
+++ b/careers.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="start">
-        <a href="inex.html">
+        <a href="index.html">
             <section class="nextBtn">Back</section>
         </a>
     </section>
